<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
>
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/background"
		tools:context=".FormCadastro"
	>
		<TextView
			style="@style/LoginTitle"
			android:id="@+id/title"
			android:text="@string/registerTitle"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
		/>

		<LinearLayout
			style="@style/LoginForm"
			android:id="@+id/form"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/title"
		>
			<EditText
				style="@style/LoginTextInput"
				android:id="@+id/email"
				android:hint="@string/fieldEmail"
				android:inputType="textEmailAddress"
				android:autofillHints="emailAddress"
				android:drawableStart="@drawable/ic_email"
				android:imeOptions="actionNext"
			/>

			<EditText
				style="@style/LoginTextInput"
				android:id="@+id/password"
				android:hint="@string/fieldPassword"
				android:inputType="textPassword"
				android:autofillHints="password"
				android:drawableStart="@drawable/ic_key"
				android:imeOptions="actionDone"
			/>

			<LinearLayout style="@style/LoginSubmitButtonContainer" android:gravity="center">
				<androidx.appcompat.widget.AppCompatButton
					style="@style/LoginSubmitButton"
					android:id="@+id/submitButton"
					android:text="@string/buttonRegister"
				/>
			</LinearLayout>

			<ProgressBar
				style="@style/FormProgressBar"
				android:id="@+id/progressBar"
				android:layout_height="28sp"
				android:layout_marginTop="-34sp"
			/>
		</LinearLayout>
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
