<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
>
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/background"
		tools:context=".FormLogin"
	>
		<ImageView
			android:id="@+id/logo"
			android:layout_width="200dp"
			android:layout_height="200dp"
			android:src="@drawable/logo"
			android:padding="20dp"
			android:layout_marginTop="20dp"
			android:contentDescription="@string/logoAltText"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
		/>

		<LinearLayout
			style="@style/LoginForm"
			android:id="@+id/form"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/logo"
		>
			<EditText
				style="@style/LoginTextInput"
				android:id="@+id/email"
				android:hint="@string/fieldEmail"
				android:inputType="textEmailAddress"
				android:autofillHints="emailAddress"
				android:drawableStart="@drawable/icon_email"
			/>

			<EditText
				style="@style/LoginTextInput"
				android:id="@+id/password"
				android:hint="@string/fieldPassword"
				android:inputType="textPassword"
				android:autofillHints="password"
				android:drawableStart="@drawable/icon_eye"
			/>

			<LinearLayout style="@style/LoginSubmitButtonContainer">
				<androidx.appcompat.widget.AppCompatButton
					style="@style/LoginSubmitButton"
					android:text="@string/buttonLogin"
				/>
			</LinearLayout>
		</LinearLayout>

		<TextView
			android:id="@+id/register"
			android:text="@string/register"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="40dp"
			android:paddingLeft="40dp"
			android:paddingRight="40dp"
			android:textSize="22sp"
			android:textColor="?colorOnPrimary"
			android:textAlignment="center"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/form"
		/>

		<ProgressBar
			android:id="@+id/progressBar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="40dp"
			android:indeterminateTintMode="src_atop"
			android:indeterminateTint="?colorOnPrimary"
			android:visibility="invisible"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/register"
		/>
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
