<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
>
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/background"
		tools:context=".FormCadastro"
	>
		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="80dp"
			android:textSize="45sp"
			android:text="@string/registerTitle"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent"
		/>

		<LinearLayout
			style="@style/LoginForm"
			android:id="@+id/form"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/title"
		>
			<EditText
				style="@style/LoginTextInput"
				android:id="@+id/name"
				android:hint="@string/fieldName"
				android:inputType="textPersonName"
				android:autofillHints="name"
				android:drawableStart="@drawable/icon_person"
			/>

			<EditText
				style="@style/LoginTextInput"
				android:id="@+id/email"
				android:hint="@string/fieldEmail"
				android:inputType="textEmailAddress"
				android:autofillHints="emailAddress"
				android:drawableStart="@drawable/icon_email"
			/>

			<EditText
				style="@style/LoginTextInput"
				android:id="@+id/password"
				android:hint="@string/fieldPassword"
				android:inputType="textPassword"
				android:autofillHints="password"
				android:drawableStart="@drawable/icon_eye"
			/>

			<LinearLayout style="@style/LoginSubmitButtonContainer">
				<androidx.appcompat.widget.AppCompatButton
					style="@style/LoginSubmitButton"
					android:text="@string/buttonLogin"
				/>
			</LinearLayout>
		</LinearLayout>

		<ProgressBar
			style="@style/FormProgressBar"
			android:id="@+id/progressBar"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/form"
		/>
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
